--- a/static/css/sorteador.css
+++ b/static/css/sorteador.css
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   max-width: 1000px;
-  height: 540px;                 /* trava o tamanho pra caber na tela */
+  height: 480px;                 /* trava o tamanho pra caber na tela */
   display: flex;
   align-items: stretch;     /* era center */
   justify-content: space-between;
@@ -37,18 +37,17 @@
   height: 100%;             /* novo: ocupa toda a altura do card */
 }
 
-.container__informacoes {
+.container__informacoes{
   flex: 1;
   padding: 1.8rem 2rem;
-
   display: flex;
   flex-direction: column;
-  height: 100%;            /* novo */
+  height: 100%;
+  min-height: 0;            /* 🔥 importante p/ scroll funcionar em flex */
 }
 
-
-.container__texto {
-  margin: 10px 0 14px;
+.container__texto{
+  margin: -15px 0 10px;
   display: flex;
   flex-direction: column;
 }
@@ -118,9 +117,11 @@ h1 {
 }
 
 .container__imagem-pessoa {
-  max-height: 380px;             /* limita a imagem pra não estourar o card */
+  max-height: 500px;             /* limita a imagem pra não estourar o card */
   height: auto;
-  margin-right: 18px;
+  margin-right: -20px;
+  align-self: flex-end;
+  margin-bottom: -10px;
 }
 
 @media screen and (max-width: 1250px) {
@@ -133,12 +134,11 @@ h1 {
    RESULTADO COM SCROLL
 ========================= */
 #resultado {
-  margin-top: -100x;        /* 🔥 empurra o resultado pro fundo */
-  height: 220px;
-  max-height: 220px;
+  margin-top: 15px;        /* 🔥 empurra o resultado pro fundo */
+  height: 350px;
   overflow-y: auto;
-
-  padding: 10px 12px;
+  
+  padding: 18px 20px;
   border-radius: 14px;
   background: rgba(255,255,255,.06);
   border: 1px solid rgba(255,255,255,.12);
