--- a/templates/games/amigo_secreto.html
+++ b/templates/games/amigo_secreto.html
@@ -2,7 +2,7 @@
 {% block title %}Amigo Secreto{% endblock %}
 
 {% block extra_css %}
-  <link rel="stylesheet" href="/static/css/amigo_secreto.css?v=2" />
+  <link rel="stylesheet" href="/static/css/amigo_secreto.css?v=4" />
 {% endblock %}
 
 {% block content %}
@@ -53,8 +53,26 @@
       <img src="/img/imagem-presente.png" alt="imagem-presente" class="container__imagem-presente" />
     </div>
   </div>
+
+  <!-- Modal Editar -->
+<div id="edit-modal" class="modal" aria-hidden="true">
+  <div class="modal__overlay" data-close="true"></div>
+
+  <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="edit-title">
+    <h2 id="edit-title" class="modal__title">Editar nome</h2>
+
+    <label class="modal__label" for="edit-input">Nome do amigo</label>
+    <input id="edit-input" class="modal__input" type="text" autocomplete="off" />
+
+    <div class="modal__actions">
+      <button id="edit-cancel" class="modal__btn modal__btn--ghost" type="button">Cancelar</button>
+      <button id="edit-save" class="modal__btn modal__btn--primary" type="button">Salvar</button>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block extra_js %}
-  <script src="/static/js/amigo_secreto.js" defer></script>
+  <script src="/static/js/amigo_secreto.js?v=2" defer></script>
 {% endblock %}
